force-app/main/default/objects/ServiceTerritoryMember/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Service Territory Members Employee</relationshipLabel>
    <relationshipName>Service_Territory_Members_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>