force-app/main/default/objects/ServiceTerritoryMember/fields/FSL__Internal_SLR_HomeAddress_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
    <label>Internal SLR HomeAddress Geolocation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>