force-app/main/default/objects/ServiceTerritoryMember/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>BA: NPLMA - Used to display resource name in notification flow</description>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>