force-app/main/default/objects/ServiceTerritoryMember/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <description>46653 used in flow to show territory name in table</description>
    <formula>ServiceTerritory.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>