force-app/main/default/objects/ServiceTerritoryMember/validationRules/CANNOT_CREATE_IF_NOT_CREW.validationRule-meta.xml
<ValidationRule>
    <fullName>CANNOT_CREATE_IF_NOT_CREW</fullName>
    <active>true</active>
    <description>#30490 WHEN I click Change status on a SA in either Scheduled, Dispatched, In Progress, or Cannot Complete
THEN IF the Assigned Resource is not of type crew then the system should show an error
Flow depends on there being a crew not a technician</description>
    <errorConditionFormula>AND(ISNEW(),
TEXT(ServiceResource.ResourceType )&lt;&gt;&apos;C&apos;)</errorConditionFormula>
    <errorMessage>Service Territory Membership is only allowed for SR&apos;s of type Crew</errorMessage>
</ValidationRule>